syntax = "proto3";

package fibogrpchttp;

option go_package = "github.com/Ymqka/fibo-grpc-http/pkg/proto";

service FibonacciCalculator {
    rpc GetFiboSequence(FiboRangeRequest) returns (FiboRangeResponse) {}
}

message FiboRangeRequest {
    uint32 start = 1;
    uint32 stop  = 2;
}

message FiboRangeResponse {
    repeated uint64 sequence = 1 [packed=true];
}